test/tests/errors/error-record-dot-non-record.sm
// true
// false
/**/
/**/

program {
    var person = "Tim";
    output person.name;
}